--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-442.1KB/s(Youtube:不良林), server: ingress-i2.iivvppnn.info, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.iivvppnn.info}}
-  - {name: 🇨🇦 加拿大-1.75MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-5.37MB/s(Youtube:不良林), server: 104.224.188.29, port: 38226, type: vmess, uuid: 9299fb78-290c-4aad-befb-0130c074a622, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇭🇰 (已存活9天)香港-808.8KB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇭🇰 香港-225.8KB/s(Youtube:不良林), server: 104.208.66.126, port: 10001, type: vmess, uuid: 21f6cf3d-add5-4335-ba2a-96972a7f05bf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 104.208.66.126}}
   - {name: 🇨🇳 中国-440.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇹🇭 泰国-648.1KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇳🇱 荷兰-2.41MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.18MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-528.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-5.69MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-524.7KB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
+  - {name: 🇺🇸 美国-4.95MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-808.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-225.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-648.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-528.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-524.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-808.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-225.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-648.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-528.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-524.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-808.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-225.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-648.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-528.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-524.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活9天)香港-808.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-225.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-808.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-225.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-648.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-528.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-524.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-808.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-225.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-648.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-528.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-524.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-808.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-225.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-648.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-528.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-524.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-808.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-225.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-648.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-528.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-524.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
