--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇭🇰 (已存活9天)香港-808.8KB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇭🇰 香港-225.8KB/s(Youtube:不良林), server: 104.208.66.126, port: 10001, type: vmess, uuid: 21f6cf3d-add5-4335-ba2a-96972a7f05bf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 104.208.66.126}}
-  - {name: 🇨🇳 中国-440.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇦 加拿大-2.18MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-528.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-5.69MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-524.7KB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
-  - {name: 🇺🇸 美国-4.95MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.29MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-258.7KB/s(Youtube:不良林), server: 104.208.66.126, port: 10001, type: vmess, uuid: 21f6cf3d-add5-4335-ba2a-96972a7f05bf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 104.208.66.126}}
+  - {name: 🇨🇳 中国-486.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-3.50MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-1.85MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-488.1KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.78MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-418.7KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-4.97MB/s(Youtube:不良林), server: vfly5.xyz, port: 443, type: vmess, uuid: 825136bb-fc0a-4f43-8888-dc2e36f27e2d, alterId: 60, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly5.xyz}}
+  - {name: 🇺🇸 美国-4.74MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-808.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-225.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-524.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-258.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-808.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-225.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-524.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-258.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-808.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-225.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-524.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-258.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活9天)香港-808.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-225.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-258.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-808.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-225.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-524.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-258.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-808.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-225.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-524.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-258.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-808.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-225.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-524.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-258.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-808.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-225.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-524.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-258.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
